Avoid flickering on page reload

--- a/source/_static/scss/includes/_header.scss
+++ b/source/_static/scss/includes/_header.scss
@@ -8,10 +8,6 @@
 	& > .container {
 		position: relative;
 	}
-
-	&.inactive {
-		display: none;
-	}
 }
 
 .header__top {
